// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouteWithLayout basic 1`] = `
<div>
  <div
    class="main"
    data-layout="default"
  >
    <nav
      class="main"
    >
      <ul
        class="navList"
      >
        <li
          class="navItem"
        >
          <a
            aria-current="page"
            class="navLink separation active"
            href="/account/dummy/projects"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="harness"
              >
                <svg
                  height="30"
                  viewBox="0 0 25 25"
                  width="30"
                >
                  <path
                    d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
                    fill="#4facdf"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--font-align-center StyledProps--color StyledProps--color-white"
                style="--text-line-clamp: 2;"
              >
                <span>
                  projectsText
                </span>
              </p>
            </div>
          </a>
        </li>
        <li
          class="navItem"
        >
          <a
            class="navLink separation"
            href="/account/dummy/cd"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="cd-main"
              >
                <svg
                  fill="none"
                  height="30"
                  viewBox="0 0 26 21"
                  width="30"
                >
                  <path
                    clip-rule="evenodd"
                    d="M15.201 2.9a5.325 5.325 0 00-2.498 3.256l-.34 1.273 2.656.712.34-1.273a2.615 2.615 0 013.2-1.847 2.617 2.617 0 011.847 3.2 2.614 2.614 0 01-3.199 1.847l-.03-.008-7.673-2.057a5.325 5.325 0 00-4.069.535 5.325 5.325 0 00-2.497 3.256 5.328 5.328 0 00.536 4.07 5.328 5.328 0 003.256 2.499 5.325 5.325 0 004.069-.535 5.325 5.325 0 002.498-3.256l.34-1.274-2.656-.712-.34 1.273a2.614 2.614 0 01-3.2 1.847 2.617 2.617 0 01-1.847-3.2 2.604 2.604 0 011.218-1.585 2.604 2.604 0 011.98-.262l7.704 2.066a5.325 5.325 0 004.069-.535 5.325 5.325 0 002.497-3.257 5.329 5.329 0 00-.536-4.07 5.329 5.329 0 00-3.256-2.498 5.325 5.325 0 00-4.069.534z"
                    fill="url(#cd-main_svg__paint0_linear)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cd-main_svg__paint0_linear"
                      x1="3.557"
                      x2="8.848"
                      y1="9.622"
                      y2="18.787"
                    >
                      <stop
                        stop-color="#62F91F"
                      />
                      <stop
                        offset="1"
                        stop-color="#5EAA53"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--font-align-center StyledProps--color StyledProps--color-white"
                style="--text-line-clamp: 2;"
              >
                <span>
                  deploymentsText
                </span>
              </p>
            </div>
          </a>
        </li>
        <li
          class="navItem"
        >
          <a
            class="navLink separation"
            href="/account/dummy/ci"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="ci-main"
              >
                <svg
                  fill="none"
                  height="30"
                  viewBox="0 0 20 20"
                  width="30"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12.005 10.97a2.9 2.9 0 01-3.003-2.96 2.9 2.9 0 013.002-3.008 2.927 2.927 0 012.994 3.007 2.882 2.882 0 01-2.993 2.989v-.027zM6 .9a9.987 9.987 0 014.203-.9C15.56-.053 19.945 4.258 20 9.63v.144A9.928 9.928 0 0119.103 14l-3.092-3.102a5.15 5.15 0 00.762-2.697 4.743 4.743 0 00-4.93-4.937 5.013 5.013 0 00-2.688.765L6 .899zM3.991 2.2l-.099.09L7.36 5.734a5.16 5.16 0 00-.766 2.762c-.081 2.635 1.977 4.838 4.597 4.921.116.003.232.002.349-.002a5.116 5.116 0 002.774-.77L17.8 16.13A9.792 9.792 0 019.91 20c-5.393.08-9.829-4.25-9.908-9.673L0 10.153A9.645 9.645 0 013.99 2.2z"
                    fill="url(#ci-main_svg__paint0_linear)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="ci-main_svg__paint0_linear"
                      x1="-6.46"
                      x2="6.46"
                      y1="6.46"
                      y2="26.46"
                    >
                      <stop
                        stop-color="#73DFE7"
                      />
                      <stop
                        offset="1"
                        stop-color="#0095F7"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--font-align-center StyledProps--color StyledProps--color-white"
                style="--text-line-clamp: 2;"
              >
                <span>
                  buildsText
                </span>
              </p>
            </div>
          </a>
        </li>
        <li
          class="navItem"
        >
          <a
            class="navLink separation"
            href="/account/dummy/cf"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="cf-main"
              >
                <svg
                  fill="none"
                  height="30"
                  viewBox="0 0 20 21"
                  width="30"
                >
                  <path
                    clip-rule="evenodd"
                    d="M18.378 10.6A8.375 8.375 0 0010 2.222 8.376 8.376 0 001.622 10.6a8.377 8.377 0 004.76 7.56l.007.012.05.102 1.177 2.04C3.243 19.245 0 15.303 0 10.6 0 5.076 4.476.6 10 .6s10 4.476 10 10a9.998 9.998 0 01-10.259 9.997.893.893 0 00-.014-.128c-.252-.071-.372-.213-.496-.427L3.965 10.38c-.189-.326-.16-.945.08-1.083a.354.354 0 01.227-.03l.059.012-.016.03-.017.036a.694.694 0 01.218.015l.093.03.04.022c.094.057.183.126.256.201l.066.083c.026.037.05.077.075.119.445.782 1.172 2.032 2.178 3.75l.134.228L5.027 9.77a.834.834 0 00-.122-.158l-.015-.018a.766.766 0 00-.272-.202l-.009-.003-.055-.03a1.075 1.075 0 00-.19-.074l-.033-.007.007-.011c.133-.245.609-1.005 1.526-1.327l.19-.059c2.14-.569 2.346.192 4.49-.378 1.034-.275 1.976-.915 2.35-1.191l.108-.082c.041-.031.063-.05.063-.05l3.34 5.333s-1.182.967-2.522 1.323c-2.142.57-2.347-.19-4.49.379-1.237.328-1.75 1.061-1.75 1.061l-.198-.335 2.916 5.03a8.376 8.376 0 008.017-8.371z"
                    fill="url(#cf-main_svg__paint0_linear)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cf-main_svg__paint0_linear"
                      x1="3.54"
                      x2="15.939"
                      y1="0.6"
                      y2="19.793"
                    >
                      <stop
                        stop-color="#FFC100"
                      />
                      <stop
                        offset="1"
                        stop-color="#E66B35"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--font-align-center StyledProps--color StyledProps--color-white"
                style="--text-line-clamp: 2;"
              >
                <span>
                  featureFlagsText
                </span>
              </p>
            </div>
          </a>
        </li>
        <li
          class="navItem"
        >
          <a
            class="navLink separation"
            href="/account/dummy/ce"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="ce-main"
              >
                <svg
                  fill="none"
                  height="30"
                  viewBox="0 0 24 24"
                  width="30"
                >
                  <path
                    clip-rule="evenodd"
                    d="M1.01 16.246c.149 2.325 2.003 4.128 4.234 4.117H18.15c2.693 0 5.038-1.92 5.68-4.652.642-2.732-.584-5.569-2.97-6.872-1.227-.67-1.79-.793-2.543-.793-.752 0-1.499.157-2.442.993a.591.591 0 01-.58.219.615.615 0 01-.463-.426.653.653 0 01.136-.629c.585-.69.859-.825 1.564-1.084.705-.26.964-.26 1.777 0-2.023-3.007-6.296-4.078-9.292-2.152-2.997 1.927-4.04 5.956-2.382 9.198a.657.657 0 01-.019.632.6.6 0 01-.533.3.603.603 0 01-.515-.334 8.472 8.472 0 01-.89-3.19c-2.212.302-3.819 2.348-3.67 4.673zm12.345-3.213l.21.053c.566.14 1.89.465 1.89 1.883 0 1.169-.858 1.937-2.271 2.073v.586a.208.208 0 01-.207.207h-.52a.208.208 0 01-.207-.207v-.591c-.72-.08-1.342-.347-1.75-.759-.377-.382-.573-.876-.582-1.47h1.288c.035.786.617 1.252 1.57 1.252.327 0 1.393-.067 1.393-.92 0-.683-.792-.878-1.63-1.083a21.277 21.277 0 01-.434-.11c-.948-.25-1.96-.621-1.96-1.85 0-1.222 1.035-1.843 2.105-1.953V9.54c0-.115.093-.208.207-.208h.52c.114 0 .207.093.207.208v.627c.817.115 2.003.532 2.043 1.985h-1.29c-.07-.689-.53-1.024-1.406-1.024-.507 0-1.1.221-1.1.845 0 .564.332.65 1.924 1.059z"
                    fill="url(#ce-main_svg__paint0_linear)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="ce-main_svg__paint0_linear"
                      x1="-6.429"
                      x2="2.371"
                      y1="9.286"
                      y2="28.433"
                    >
                      <stop
                        stop-color="#00CFDE"
                      />
                      <stop
                        offset="1"
                        stop-color="#05A660"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--font-align-center StyledProps--color StyledProps--color-white"
                style="--text-line-clamp: 2;"
              >
                <span>
                  cloudCostsText
                </span>
              </p>
            </div>
          </a>
        </li>
        <li
          class="navItem"
        >
          <a
            class="navLink separation"
            href="/account/dummy/cv"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
              style="width: 90px;"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="cv-main"
              >
                <svg
                  fill="none"
                  height="30"
                  viewBox="0 0 24 24"
                  width="30"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10.867 21.7l.307.182a1.97 1.97 0 001.021.268c.35.002.695-.09 1.002-.268l.306-.183c4.869-2.881 7.883-8.291 7.888-14.158v-.15a2.168 2.168 0 00-1.022-1.878l-1.39-.82-6.6 10.775a.716.716 0 01-.528.245.72.72 0 01-.536-.238l-3.521-3.84a.758.758 0 01-.165-.724.733.733 0 01.529-.51.714.714 0 01.694.216l2.984 3.261 5.918-9.91-4.537-2.68a1.96 1.96 0 00-2.043 0L4.022 5.512A2.168 2.168 0 003 7.391v.15c.001 5.862 3.007 11.271 7.867 14.158z"
                    fill="url(#cv-main_svg__paint0_linear)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cv-main_svg__paint0_linear"
                      x1="3.942"
                      x2="14.781"
                      y1="7.1"
                      y2="25.951"
                    >
                      <stop
                        stop-color="#9E74FF"
                      />
                      <stop
                        offset="1"
                        stop-color="#8A36FF"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--font-align-center StyledProps--color StyledProps--color-white"
                style="--text-line-clamp: 2;"
              >
                <span>
                  changeVerificationText
                </span>
              </p>
            </div>
          </a>
        </li>
      </ul>
      <ul
        class="navList"
      >
        <li
          class="navItem"
        >
          <a
            class="navLink"
            href="/account/dummy/admin"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="nav-settings"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254a4.955 4.955 0 01-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                  fill="#ccc"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                  fill="#ccc"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="main"
    >
      <div>
        <div>
          sidenav
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main bottomContainer"
      >
        <div
          class="titleContainer"
        >
          <div
            class="Layout--vertical StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-grey400"
            >
              SUBTITLE
            </p>
            <p
              class="StyledProps--font StyledProps--main title StyledProps--color StyledProps--color-white"
            >
              TITLE
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="children"
    >
      <div>
        matched-route
      </div>
    </div>
  </div>
</div>
`;

exports[`RouteWithLayout empty 1`] = `
<div>
  <div
    class="children"
    data-layout="empty"
  >
    <div>
      matched-route
    </div>
  </div>
</div>
`;

exports[`RouteWithLayout minimal 1`] = `
<div>
  <div
    class="main"
    data-layout="minimal"
  >
    <nav
      class="main"
    >
      <ul
        class="navList"
      >
        <li
          class="navItem"
        >
          <a
            aria-current="page"
            class="navLink separation active"
            href="/account/dummy/projects"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="harness"
              >
                <svg
                  height="30"
                  viewBox="0 0 25 25"
                  width="30"
                >
                  <path
                    d="M22.974 8.186L16.708 1.88a7.023 7.023 0 00-2.59-1.572C11.98-.409 9.858.154 8.135 1.88L1.868 8.186a7.081 7.081 0 00-1.562 2.606c-.713 2.153-.153 4.289 1.562 6.023l6.266 6.306a7.113 7.113 0 002.589 1.58 5.663 5.663 0 001.808.308c1.503 0 2.946-.64 4.177-1.88l6.266-6.305a7.08 7.08 0 001.562-2.606c.713-2.162.153-4.298-1.562-6.032zm-10.07-4.477c.706.213 1.232.7 1.274.735l1.851 1.862-3.608 3.631-3.608-3.63 1.859-1.872c.5-.496 1.197-1.034 2.233-.726zm-9.219 8.305c.212-.71.696-1.24.73-1.282l1.85-1.863 3.609 3.632-3.608 3.63-1.86-1.87c-.492-.504-1.027-1.214-.721-2.247zm8.252 9.279c-.705-.214-1.231-.701-1.273-.735l-1.851-1.863 3.608-3.631 3.608 3.631-1.86 1.871c-.5.496-1.205 1.034-2.232.726zm9.22-8.305c-.212.709-.696 1.239-.73 1.281l-1.851 1.863-3.608-3.631 3.608-3.632 1.86 1.872c.492.504 1.027 1.204.72 2.247z"
                    fill="#4facdf"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--font-align-center StyledProps--color StyledProps--color-white"
                style="--text-line-clamp: 2;"
              >
                <span>
                  projectsText
                </span>
              </p>
            </div>
          </a>
        </li>
        <li
          class="navItem"
        >
          <a
            class="navLink separation"
            href="/account/dummy/cd"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="cd-main"
              >
                <svg
                  fill="none"
                  height="30"
                  viewBox="0 0 26 21"
                  width="30"
                >
                  <path
                    clip-rule="evenodd"
                    d="M15.201 2.9a5.325 5.325 0 00-2.498 3.256l-.34 1.273 2.656.712.34-1.273a2.615 2.615 0 013.2-1.847 2.617 2.617 0 011.847 3.2 2.614 2.614 0 01-3.199 1.847l-.03-.008-7.673-2.057a5.325 5.325 0 00-4.069.535 5.325 5.325 0 00-2.497 3.256 5.328 5.328 0 00.536 4.07 5.328 5.328 0 003.256 2.499 5.325 5.325 0 004.069-.535 5.325 5.325 0 002.498-3.256l.34-1.274-2.656-.712-.34 1.273a2.614 2.614 0 01-3.2 1.847 2.617 2.617 0 01-1.847-3.2 2.604 2.604 0 011.218-1.585 2.604 2.604 0 011.98-.262l7.704 2.066a5.325 5.325 0 004.069-.535 5.325 5.325 0 002.497-3.257 5.329 5.329 0 00-.536-4.07 5.329 5.329 0 00-3.256-2.498 5.325 5.325 0 00-4.069.534z"
                    fill="url(#cd-main_svg__paint0_linear)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cd-main_svg__paint0_linear"
                      x1="3.557"
                      x2="8.848"
                      y1="9.622"
                      y2="18.787"
                    >
                      <stop
                        stop-color="#62F91F"
                      />
                      <stop
                        offset="1"
                        stop-color="#5EAA53"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--font-align-center StyledProps--color StyledProps--color-white"
                style="--text-line-clamp: 2;"
              >
                <span>
                  deploymentsText
                </span>
              </p>
            </div>
          </a>
        </li>
        <li
          class="navItem"
        >
          <a
            class="navLink separation"
            href="/account/dummy/ci"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="ci-main"
              >
                <svg
                  fill="none"
                  height="30"
                  viewBox="0 0 20 20"
                  width="30"
                >
                  <path
                    clip-rule="evenodd"
                    d="M12.005 10.97a2.9 2.9 0 01-3.003-2.96 2.9 2.9 0 013.002-3.008 2.927 2.927 0 012.994 3.007 2.882 2.882 0 01-2.993 2.989v-.027zM6 .9a9.987 9.987 0 014.203-.9C15.56-.053 19.945 4.258 20 9.63v.144A9.928 9.928 0 0119.103 14l-3.092-3.102a5.15 5.15 0 00.762-2.697 4.743 4.743 0 00-4.93-4.937 5.013 5.013 0 00-2.688.765L6 .899zM3.991 2.2l-.099.09L7.36 5.734a5.16 5.16 0 00-.766 2.762c-.081 2.635 1.977 4.838 4.597 4.921.116.003.232.002.349-.002a5.116 5.116 0 002.774-.77L17.8 16.13A9.792 9.792 0 019.91 20c-5.393.08-9.829-4.25-9.908-9.673L0 10.153A9.645 9.645 0 013.99 2.2z"
                    fill="url(#ci-main_svg__paint0_linear)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="ci-main_svg__paint0_linear"
                      x1="-6.46"
                      x2="6.46"
                      y1="6.46"
                      y2="26.46"
                    >
                      <stop
                        stop-color="#73DFE7"
                      />
                      <stop
                        offset="1"
                        stop-color="#0095F7"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--font-align-center StyledProps--color StyledProps--color-white"
                style="--text-line-clamp: 2;"
              >
                <span>
                  buildsText
                </span>
              </p>
            </div>
          </a>
        </li>
        <li
          class="navItem"
        >
          <a
            class="navLink separation"
            href="/account/dummy/cf"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="cf-main"
              >
                <svg
                  fill="none"
                  height="30"
                  viewBox="0 0 20 21"
                  width="30"
                >
                  <path
                    clip-rule="evenodd"
                    d="M18.378 10.6A8.375 8.375 0 0010 2.222 8.376 8.376 0 001.622 10.6a8.377 8.377 0 004.76 7.56l.007.012.05.102 1.177 2.04C3.243 19.245 0 15.303 0 10.6 0 5.076 4.476.6 10 .6s10 4.476 10 10a9.998 9.998 0 01-10.259 9.997.893.893 0 00-.014-.128c-.252-.071-.372-.213-.496-.427L3.965 10.38c-.189-.326-.16-.945.08-1.083a.354.354 0 01.227-.03l.059.012-.016.03-.017.036a.694.694 0 01.218.015l.093.03.04.022c.094.057.183.126.256.201l.066.083c.026.037.05.077.075.119.445.782 1.172 2.032 2.178 3.75l.134.228L5.027 9.77a.834.834 0 00-.122-.158l-.015-.018a.766.766 0 00-.272-.202l-.009-.003-.055-.03a1.075 1.075 0 00-.19-.074l-.033-.007.007-.011c.133-.245.609-1.005 1.526-1.327l.19-.059c2.14-.569 2.346.192 4.49-.378 1.034-.275 1.976-.915 2.35-1.191l.108-.082c.041-.031.063-.05.063-.05l3.34 5.333s-1.182.967-2.522 1.323c-2.142.57-2.347-.19-4.49.379-1.237.328-1.75 1.061-1.75 1.061l-.198-.335 2.916 5.03a8.376 8.376 0 008.017-8.371z"
                    fill="url(#cf-main_svg__paint0_linear)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cf-main_svg__paint0_linear"
                      x1="3.54"
                      x2="15.939"
                      y1="0.6"
                      y2="19.793"
                    >
                      <stop
                        stop-color="#FFC100"
                      />
                      <stop
                        offset="1"
                        stop-color="#E66B35"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--font-align-center StyledProps--color StyledProps--color-white"
                style="--text-line-clamp: 2;"
              >
                <span>
                  featureFlagsText
                </span>
              </p>
            </div>
          </a>
        </li>
        <li
          class="navItem"
        >
          <a
            class="navLink separation"
            href="/account/dummy/ce"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="ce-main"
              >
                <svg
                  fill="none"
                  height="30"
                  viewBox="0 0 24 24"
                  width="30"
                >
                  <path
                    clip-rule="evenodd"
                    d="M1.01 16.246c.149 2.325 2.003 4.128 4.234 4.117H18.15c2.693 0 5.038-1.92 5.68-4.652.642-2.732-.584-5.569-2.97-6.872-1.227-.67-1.79-.793-2.543-.793-.752 0-1.499.157-2.442.993a.591.591 0 01-.58.219.615.615 0 01-.463-.426.653.653 0 01.136-.629c.585-.69.859-.825 1.564-1.084.705-.26.964-.26 1.777 0-2.023-3.007-6.296-4.078-9.292-2.152-2.997 1.927-4.04 5.956-2.382 9.198a.657.657 0 01-.019.632.6.6 0 01-.533.3.603.603 0 01-.515-.334 8.472 8.472 0 01-.89-3.19c-2.212.302-3.819 2.348-3.67 4.673zm12.345-3.213l.21.053c.566.14 1.89.465 1.89 1.883 0 1.169-.858 1.937-2.271 2.073v.586a.208.208 0 01-.207.207h-.52a.208.208 0 01-.207-.207v-.591c-.72-.08-1.342-.347-1.75-.759-.377-.382-.573-.876-.582-1.47h1.288c.035.786.617 1.252 1.57 1.252.327 0 1.393-.067 1.393-.92 0-.683-.792-.878-1.63-1.083a21.277 21.277 0 01-.434-.11c-.948-.25-1.96-.621-1.96-1.85 0-1.222 1.035-1.843 2.105-1.953V9.54c0-.115.093-.208.207-.208h.52c.114 0 .207.093.207.208v.627c.817.115 2.003.532 2.043 1.985h-1.29c-.07-.689-.53-1.024-1.406-1.024-.507 0-1.1.221-1.1.845 0 .564.332.65 1.924 1.059z"
                    fill="url(#ce-main_svg__paint0_linear)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="ce-main_svg__paint0_linear"
                      x1="-6.429"
                      x2="2.371"
                      y1="9.286"
                      y2="28.433"
                    >
                      <stop
                        stop-color="#00CFDE"
                      />
                      <stop
                        offset="1"
                        stop-color="#05A660"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--font-align-center StyledProps--color StyledProps--color-white"
                style="--text-line-clamp: 2;"
              >
                <span>
                  cloudCostsText
                </span>
              </p>
            </div>
          </a>
        </li>
        <li
          class="navItem"
        >
          <a
            class="navLink separation"
            href="/account/dummy/cv"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
              style="width: 90px;"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="cv-main"
              >
                <svg
                  fill="none"
                  height="30"
                  viewBox="0 0 24 24"
                  width="30"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10.867 21.7l.307.182a1.97 1.97 0 001.021.268c.35.002.695-.09 1.002-.268l.306-.183c4.869-2.881 7.883-8.291 7.888-14.158v-.15a2.168 2.168 0 00-1.022-1.878l-1.39-.82-6.6 10.775a.716.716 0 01-.528.245.72.72 0 01-.536-.238l-3.521-3.84a.758.758 0 01-.165-.724.733.733 0 01.529-.51.714.714 0 01.694.216l2.984 3.261 5.918-9.91-4.537-2.68a1.96 1.96 0 00-2.043 0L4.022 5.512A2.168 2.168 0 003 7.391v.15c.001 5.862 3.007 11.271 7.867 14.158z"
                    fill="url(#cv-main_svg__paint0_linear)"
                    fill-rule="evenodd"
                  />
                  <defs>
                    <lineargradient
                      gradientUnits="userSpaceOnUse"
                      id="cv-main_svg__paint0_linear"
                      x1="3.942"
                      x2="14.781"
                      y1="7.1"
                      y2="25.951"
                    >
                      <stop
                        stop-color="#9E74FF"
                      />
                      <stop
                        offset="1"
                        stop-color="#8A36FF"
                      />
                    </lineargradient>
                  </defs>
                </svg>
              </span>
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--font-align-center StyledProps--color StyledProps--color-white"
                style="--text-line-clamp: 2;"
              >
                <span>
                  changeVerificationText
                </span>
              </p>
            </div>
          </a>
        </li>
      </ul>
      <ul
        class="navList"
      >
        <li
          class="navItem"
        >
          <a
            class="navLink"
            href="/account/dummy/admin"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="nav-settings"
            >
              <svg
                fill="none"
                height="20"
                viewBox="0 0 18 18"
                width="20"
              >
                <path
                  clip-rule="evenodd"
                  d="M16.305 10.942l-1.147-.98a6.286 6.286 0 000-2.025l1.147-.981a.56.56 0 00.163-.617l-.016-.045a7.77 7.77 0 00-1.396-2.415l-.031-.037a.562.562 0 00-.615-.166l-1.424.506a6.172 6.172 0 00-1.745-1.009l-.275-1.488a.561.561 0 00-.452-.45l-.048-.009a7.912 7.912 0 00-2.784 0l-.047.009a.561.561 0 00-.452.45L6.906 3.18a6.16 6.16 0 00-1.734 1.006l-1.434-.51a.56.56 0 00-.614.166l-.032.037a7.809 7.809 0 00-1.396 2.415l-.015.045a.562.562 0 00.162.617l1.161.991a6.16 6.16 0 000 2l-1.16.991a.56.56 0 00-.163.617l.015.045a7.79 7.79 0 001.396 2.415l.032.037c.15.177.395.243.614.166l1.434-.51c.522.43 1.106.77 1.734 1.006l.277 1.495c.042.23.222.409.452.45l.047.01a7.869 7.869 0 002.784 0l.048-.01c.23-.041.41-.22.452-.45l.275-1.488a6.131 6.131 0 001.745-1.009l1.424.506a.56.56 0 00.615-.166l.031-.037a7.809 7.809 0 001.396-2.415l.016-.045a.559.559 0 00-.163-.613zm-2.39-2.8a4.951 4.951 0 010 1.615l-.116.702 1.309 1.12a6.474 6.474 0 01-.746 1.288l-1.626-.576-.55.452a4.896 4.896 0 01-1.388.802l-.667.25-.314 1.699a6.616 6.616 0 01-1.488 0l-.314-1.702-.662-.254a4.955 4.955 0 01-1.378-.8l-.55-.454-1.636.581a6.614 6.614 0 01-.746-1.289l1.323-1.13-.114-.7a5.04 5.04 0 01-.065-.796c0-.268.021-.536.065-.797l.114-.7-1.323-1.13c.198-.457.449-.888.746-1.29l1.636.582.55-.453c.415-.342.88-.612 1.378-.8l.664-.251.313-1.702a6.612 6.612 0 011.489 0l.313 1.698.668.25c.502.19.97.46 1.388.803l.55.452 1.625-.576c.298.4.547.833.746 1.288l-1.308 1.12.114.698z"
                  fill="#ccc"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M9.076 5.693a3.082 3.082 0 100 6.165 3.082 3.082 0 000-6.165zm1.387 4.47c-.371.37-.863.574-1.387.574a1.955 1.955 0 01-1.387-.574 1.954 1.954 0 01-.574-1.387c0-.524.205-1.016.574-1.387a1.947 1.947 0 011.387-.575c.524 0 1.016.203 1.387.575.37.371.575.863.575 1.387 0 .523-.205 1.015-.575 1.387z"
                  fill="#ccc"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="children"
    >
      <div>
        matched-route
      </div>
    </div>
  </div>
</div>
`;
